--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "crypto": "^1.0.1",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-jwt": "^6.0.0",
+    "express-validator": "^5.3.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.4",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
     "uuid": "^8.3.0",
-    "uuidv1": "^1.6.14",
-    "express-validator": "^5.3.1"
+    "uuidv1": "^1.6.14"
   }
 }
