--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "express": "^4.16.4",
     "express-jwt": "^5.3.1",
     "express-validator": "^5.3.1",
-    "formidable": "^1.2.2",
+    "formidable": "^1.2.1",
+    "fs": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.20",
     "mongoose": "^5.5.5",
