--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "body-parser": "^1.19.0",
     "concurrently": "^5.3.0",
     "cookie-parser": "^1.4.5",
+    "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "dotenv": "^8.0.0",
     "express": "^4.16.4",
@@ -37,6 +38,7 @@
     "mongoose": "^5.5.5",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
+    "redux-thunk": "^2.3.0",
     "uuid": "^8.3.0",
     "uuidv1": "^1.6.14"
   }
