--- a/package.json
+++ b/package.json
@@ -23,11 +23,12 @@
   "homepage": "https://github.com/Gamygams1234/mern-ecommerce#readme",
   "dependencies": {
     "body-parser": "^1.19.0",
+    "braintree": "^3.0.0",
     "concurrently": "^5.3.0",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
-    "dotenv": "^8.0.0",
+    "dotenv": "^8.2.0",
     "express": "^4.16.4",
     "express-jwt": "^5.3.1",
     "express-validator": "^5.3.1",
