--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "mongoose": "^5.5.5",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.4",
+    "path": "^0.12.7",
     "redux-thunk": "^2.3.0",
     "uuid": "^8.3.0",
     "uuidv1": "^1.6.14"
